syntax = "proto3";

package task;

option go_package = "/proto/taskpb";

message TaskRequest {
    string id = 1;
    string expression = 2;
}

message TaskResponse {
    string id = 1;
    double result = 2;
    string error = 3;
    bool ok = 4;
}

service TaskService {
    rpc GetTask(Empty) returns (TaskRequest);
    rpc SendResult(TaskResponse) returns (Empty);
}

message Empty {}